force-app/main/default/objects/RC_Recurring_Donation_Settings__c/RC_Recurring_Donation_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>These settings configured periods of time for the next payment attempts</description>
    <label>RC Recurring Donation Settings</label>
</CustomObject>