force-app/main/default/objects/RC_Recurring_Donation_Settings__c/fields/Fourth_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Attempt__c</fullName>
    <description>This parameter indicates the number of days to make fourth payment attempt</description>
    <inlineHelpText>This parameter indicates the number of days to make fourth payment attempt</inlineHelpText>
    <label>Fourth Attempt</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>