force-app/main/default/objects/RC_Recurring_Donation_Settings__c/fields/Third_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Third_Attempt__c</fullName>
    <description>This parameter indicates the number of days to make third payment attempt</description>
    <inlineHelpText>This parameter indicates the number of days to make third payment attempt</inlineHelpText>
    <label>Third Attempt</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>