force-app/main/default/objects/RC_Recurring_Donation_Settings__c/listViews/Detail.listView-meta.xml
<ListView>
    <fullName>Detail</fullName>
    <columns>NAME</columns>
    <columns>Second_Attempt__c</columns>
    <columns>Third_Attempt__c</columns>
    <columns>Fourth_Attempt__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Detail</label>
    <language>en_US</language>
</ListView>